--- a/erika.html
+++ b/erika.html
@@ -24,13 +24,11 @@
                 <a href="https://lavie0.github.io/LAVIE-WIN/"><li>Início</li></a>
                 <a href="https://lavie0.github.io/LAVIE-WIN/#eventos"><li>Eventos <sub><img src="img/notificacao.png" alt="notificação"></sub> </li></a>
                 <a href="https://lavie0.github.io/Lavie/#intro"><li>Madrinhas</li></a>
-                <a href="https://lavie0.github.io/LAVIE-WIN/#saiba"><li>Saiba mais</li></a>
-                
-               <a href=""><li><img src="img/mareni.svg" alt="Usuário"></li></a>
+               <a href=""><li><img src="img/anonimo.svg" alt="Usuário"></li></a>
             </ul>
         </div>
     </header>
-    <div class="madrinha" id="mad">
+    <div class="madrinha">
         <h1 >Sua madrinha <img src="img/Asset 1.svg" alt=""></h1>
     </div>
     <section id="container">
@@ -40,9 +38,10 @@
             <h3>Em comum com você</h3>
             <ul>
                 <li>Mastectomia</li>
-                <li>Radioterapia</li>
                 <li>Quimioterapia</li>
                 <li>Solteira</li>
+                <li>Quimioterapia oral exclusiva</li>
+                <li>2 Filhos</li>
             </ul>
             <hr>
             <div class="informacoes">
@@ -75,9 +74,11 @@
     </section>
     <section id="cordefundo">
         <div id="contrate">
-            <p>Personalize e contrate seu seguro online</p>
-            <a href="http://bit.ly/vem-simular-agora">Simule agora</a> 
+            <p>Quem tem câncer de mama também pode:
+            </p>
+            <a href="http://bit.ly/vem-simular-agora" id="simule">Simule agora</a> 
         </div>
+        <p id="win">a <span id="winsocial">WinSocial</span> é a primeira e única seguradora para pessoas que têm ou tiveram câncer de mama.</p>
     </section>
     <section id="container-footer">
         <div id="textos-footer">
@@ -85,7 +86,7 @@
             <a href="https://winsocial.com.br/para-voce/"><img src="img/winsocial.svg" alt="Winsocial" id="patrocinador"></a>
         </div>
         <div id="colaboradores">
-            <p>Colaboradores</p>
+            <p>Parceiros</p>
         </div>
         <div id="img-footer">
             <a href="https://www.inca.gov.br/"><img src="img/image3.svg" alt="Inca"></a>
